fixed title alignment

--- a/src/css/calendar.css
+++ b/src/css/calendar.css
@@ -67,7 +67,6 @@ footer {
   justify-content: center;
   border-radius: 5px;
   color: #5C8444;
-  background-color: #fff;
   font-size: 16px;
   cursor: pointer;
   transition: all 0.3s;
